[package]
name = "otp-acl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.5", features = ["chrono","postgres","r2d2"] }
dotenvy = "0.15.7"
actix-web = "4.5.1"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
json = "0.12"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }


